# desuko-discord

./: 404.html  README.md  desuko.yaml  index.html  pyproject.toml
desuko/: __init__.py  __main__.py  bot.py  loader.py
desuko/modules/: tutorial.py
docs/getting_started/: 1_Installation.md  2_Configuration.md
docs/getting_started/1_Installation/: index.html
docs/getting_started/2_Configuration/: index.html
docs/modules/Development/: HandlersAndSubs.md  HelloDesuko.md
docs/modules/Development/HandlersAndSubs/: index.html
docs/modules/Development/HelloDesuko/: index.html
reference/desuko/: index.html
reference/desuko/bot/: index.html
reference/desuko/loader/: index.html
search/: search_index.json
